2006-09-08  Douglas Bates  <bates@R-project.org>

	* DESCRIPTION (Imports): Remove imports of utils and latticeExtra

2006-09-07  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/lmer.R (printMer): S4 method for print() needed
	* NAMESPACE: and exported

2006-09-06  Douglas Bates  <bates@R-project.org>

	* src/cholmod.[ch]: Updates for CHOLMOD ver 1.2 installed in the
	Matrix package

2006-09-04  Douglas Bates  <bates@R-project.org>

	* (many files): Move lmer files back to lme4.

2005-07-26  Douglas Bates  <bates@R-project.org>

	* R/AllGeneric.R: Remove the getCovariate, etc. generics and methods

2005-07-13  Douglas Bates  <bates@R-project.org>

	* R/lmList.R: lmList now uses the standard non-standard evaluation
	scheme for the model frame.

2005-05-19  Douglas Bates  <bates@R-project.org>

	* R/lmer.R (fn): Restored the ML in name MLdeviance from summary.

2005-04-18  Douglas Bates  <bates@R-project.org>

	* R/lmer.R: Choose method values appropriately for lmer with or
	without a family argument.

	* DESCRIPTION: change dependence to Matrix(>= 0.95-6)

	* R/lmList.R: Added argument pool to confint method for lmList and
	order to plot method for confint.lmList

2005-04-15  Douglas Bates  <bates@R-project.org>

	* DESCRIPTION: Change dependence to R (>= 2.1.0) and remove the
	contr.SAS definition and documentation.

2005-04-12  Douglas Bates  <bates@R-project.org>

	* R/lmer.R: Fixed problem with assignment of frame in lmer method
	with nonmissing family argument.

2005-04-06  Douglas Bates  <bates@R-project.org>

	* R/lmer.R: Fix with method to accomodate for nontrivial na.action

	* R/lmList.R: Repair the plot method for the lmList.confint class

2005-04-05  Douglas Bates  <bates@R-project.org>

	* R/lmer.R: Update of the "with" method.
	* : Removed humongous PDF file accidently included in tarball.
	Created release 0.95-3.


2005-02-27  Douglas Bates  <bates@R-project.org>

	* R/lme.R: Removed the stubs of the plot methods.
