@@ -1,3 +1,8 @@
+2006-09-11  Douglas Bates  <bates@R-project.org>
+
+	* src/lme4_utils.[ch]: Move the alloc_d**Matrix functions from the
+	Matrix package here.
+
 2006-09-08  Douglas Bates  <bates@R-project.org>
 
 	* DESCRIPTION (Imports): Remove imports of utils and latticeExtra
